--- a/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/PhanCongCongNhan.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/PhanCongCongNhan.fxml
@@ -14,8 +14,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
-
-<BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.CongNhanController">
+<BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.PhanCongCongNhanController">
    <bottom>
       <HBox alignment="CENTER_LEFT" fillHeight="false" spacing="20.0" BorderPane.alignment="CENTER">
          <children>
@@ -51,15 +50,14 @@
                   <TableView fx:id="tblViewTTSanPhamPhanCongCongNhan" maxWidth="-Infinity" minWidth="-Infinity" onMouseClicked="#chonROWTTChiTietSanPham">
                     <columns>
                         <TableColumn fx:id="colMaSanPhamPhanCongCongNhan1" prefWidth="125.59996949434299" text="Mã sản phẩm" />
-                      <TableColumn fx:id="colTenSanPhamPhanCongCongNhan" prefWidth="128.80001831054688" text="Tên sản phẩm" />
-                      <TableColumn fx:id="colSLSanPhamPhanCongCongNhan" prefWidth="110.4000183105469" text="Số lượng làm" />
+                      <TableColumn fx:id="colTenSanPhamPhanCongCongNhan" prefWidth="252.80001831054688" text="Tên sản phẩm" />
+                      <TableColumn fx:id="colSLSanPhamPhanCongCongNhan" prefWidth="180.800048828125" text="Số lượng làm" />
                     </columns>
                   </TableView>
-                  <TableView fx:id="tblViewTTCongDoanPhanCongCongNhan" maxWidth="-Infinity" minWidth="-Infinity">
+                  <TableView fx:id="tblViewTTCongDoanPhanCongCongNhan" maxWidth="-Infinity" minWidth="-Infinity" onMouseClicked="#chonROWTTCongDoanSanPham">
                     <columns>
-                      <TableColumn fx:id="colMaCongDoanPhanCongCongNhan" prefWidth="165.5999999999999" text="Mã công đoạn" />
-                        <TableColumn fx:id="colTenSanPhamCDPhanCongCongNhan" prefWidth="245.60003662109375" text="Tên sản phẩm" />
-                      <TableColumn fx:id="colTenCongDoanPhanCongCongNhan" minWidth="0.0" prefWidth="192.79989624023438" text="Tên công đoạn" />
+                      <TableColumn fx:id="colMaCongDoanPhanCongCongNhan" prefWidth="211.20007934570458" text="Mã công đoạn" />
+                      <TableColumn fx:id="colTenCongDoanPhanCongCongNhan" minWidth="0.0" prefWidth="188.7999267578125" text="Tên công đoạn" />
                     </columns>
                   </TableView>
                   <TableView fx:id="tblViewTTToPhanCongCongNhan" minWidth="-Infinity">
@@ -75,20 +73,38 @@
                <children>
                   <HBox alignment="CENTER_LEFT" spacing="10.0">
                      <children>
-                        <Label text="Ngày phân công:" />
-                        <DatePicker fx:id="datepickNgayPhanCong" />
+                        <Label text="Sản phẩm:" />
+                        <TextField fx:id="tfSanPhamPhanCong" disable="true" editable="false" prefHeight="26.0" prefWidth="131.0" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER_LEFT" spacing="10.0">
                      <children>
-                        <Label text="Số lương phân công tự động cho mỗi công nhân" />
+                        <Label text="Công đoạn:" />
+                        <TextField fx:id="tfCongDoanPhanCong" disable="true" editable="false" prefHeight="26.0" prefWidth="122.0" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" spacing="10.0">
+                     <children>
+                        <Label text="Tổ :" />
+                        <TextField fx:id="tfToPhanCong" disable="true" editable="false" prefHeight="26.0" prefWidth="54.0" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" spacing="10.0">
+                     <children>
+                        <Label text="Ngày phân công:" />
+                        <DatePicker fx:id="datepickNgayPhanCong" prefHeight="26.0" prefWidth="135.0" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" spacing="10.0">
+                     <children>
+                        <Label text="Số lượng cho mỗi công nhân" />
                         <TextField fx:id="tfSoLuongPhanCongTungNguoi" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER_LEFT" spacing="10.0">
                      <children>
                         <Label text="Ngày kết thúc:" />
-                        <DatePicker fx:id="datepickNgayKetThuc" />
+                        <DatePicker fx:id="datepickNgayKetThuc" prefHeight="26.0" prefWidth="130.0" />
                      </children>
                   </HBox>
                   <Button mnemonicParsing="false" text="Phân công">
@@ -109,7 +125,7 @@
                <items>
                   <TableView fx:id="tblViewTTPhanCongTungCongNhan" maxWidth="-Infinity" minWidth="-Infinity">
                     <columns>
-                      <TableColumn fx:id="colMaChamCongTTPhanCongTungCongNhan" prefWidth="133.599969494343" text="Mã chấm công" />
+                      <TableColumn fx:id="colMaChamCongTTPhanCongTungCongNhan" prefWidth="133.599969494343" text="Mã phân công " />
                       <TableColumn fx:id="colNgayPhamCongChamCongTTPhanCongTungCongNhan" minWidth="0.0" prefWidth="140.00009155273438" text="Ngày phân công" />
                         <TableColumn fx:id="colTenSanPhamTTPhanCongTungCongNhan" prefWidth="116.79998779296875" text="Tên sản phẩm" />
                         <TableColumn fx:id="colTenCongDoanTTPhanCongTungCongNhan" prefWidth="117.5999755859375" text="Tên công đoạn" />
@@ -121,7 +137,7 @@
                   </TableView>
                   <TableView fx:id="tblViewTTPhanCongToCongNhan">
                     <columns>
-                      <TableColumn fx:id="colNgayPhanCongTTPhanCongToCongNhan" prefWidth="110.39990081787073" text="Ngày phân công" />
+                      <TableColumn fx:id="colNgayPhanCongTTPhanCongToCongNhan" prefWidth="110.39990081787073" text="Mã phân công " />
                       <TableColumn fx:id="colToTTPhanCongToCongNhan" prefWidth="64.80005645751953" text="Tổ" />
                         <TableColumn fx:id="colSanPhamTTPhanCongToCongNhan11" prefWidth="84.800048828125" text="Sản phẩm " />
                         <TableColumn fx:id="colCongDoanTTPhanCongToCongNhan" prefWidth="106.39990234375" text="Công đoạn" />
