--- a/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/QuanLyToSanXuat.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/QuanLyToSanXuat.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 
 
-<BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.CongNhanController">
+<BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.PhanCongCongNhanController">
    <center>
       <ScrollPane fitToHeight="true" fitToWidth="true">
          <content>
