--- a/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/TamUngCongNhan.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/TamUngCongNhan.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.HBox?>
 
 
-    <BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.CongNhanController">
+    <BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.PhanCongCongNhanController">
         <top>
             <HBox alignment="CENTER_LEFT" prefWidth="1180.0" spacing="15.0" BorderPane.alignment="CENTER">
                 <children>
