--- a/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/TinhLuongCongNhan.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan/TinhLuongCongNhan.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 
 
-    <BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.CongNhanController">
+    <BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.PhanCongCongNhanController">
         <center>
             <ScrollPane fitToHeight="true" fitToWidth="true" BorderPane.alignment="CENTER">
                 <content>
