--- a/src/main/resources/com/openjfx/qllspahg/fxml/NhanVien/ChamCongNhanVien.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/NhanVien/ChamCongNhanVien.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -15,237 +14,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="borderChamCongNhanVien" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.ChamCongNhanVienController">
-    <center>
-        <ScrollPane fitToHeight="true" pannable="true" BorderPane.alignment="CENTER">
-            <content>
-                <TableView fx:id="tblviewChamCongNV" editable="true" onMouseClicked="#chonMotNhanVien" tableMenuButtonVisible="true">
-                    <columns>
-                        <TableColumn fx:id="colMaChamCongNV" prefWidth="85.59999996423721" text="Mã nhân viên" />
-                        <TableColumn fx:id="colHoTenChamCongNV" prefWidth="190.40005493164062" text="Họ tên" />
-                        <TableColumn fx:id="colPhongBanChamCongNV" prefWidth="135.199951171875" text="Phòng ban" />
-                        <TableColumn fx:id="colNgayChamCong" prefWidth="151.20001220703125" text="Ngày 01/xx/xxxx">
-                            <columns>
-                                <TableColumn fx:id="colCheckDiLam" prefWidth="75.0" text="Đi làm" />
-                                <TableColumn fx:id="colCheckTangCa" prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn fx:id="colCheckNghiPhep" prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 02/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 03/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 04/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 05/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 06/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 07/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 08/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 09/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 10/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 11/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 12/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 13/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 14/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 15/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 16/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 17/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 18/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 19/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 20/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 21/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 22/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 23/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 24/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 25/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 26 /xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 27/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 28/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 29/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 30/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                        <TableColumn prefWidth="114.40005493164062" text="Ngày 31/xx/xxxx">
-                            <columns>
-                                <TableColumn prefWidth="75.0" text="Đi làm" />
-                                <TableColumn prefWidth="75.0" text="Tăng ca" />
-                                <TableColumn prefWidth="75.0" text="Nghỉ phép" />
-                            </columns>
-                        </TableColumn>
-                    </columns>
-                </TableView>
-            </content>
-        </ScrollPane>
-    </center>
+<BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.ChamCongNhanVienController">
     <top>
         <VBox alignment="CENTER" spacing="15.0" BorderPane.alignment="CENTER">
             <children>
@@ -254,7 +23,7 @@
                         <HBox alignment="CENTER" spacing="10.0">
                             <children>
                                 <Label text="Mã nhân viên" />
-                                <TextField prefHeight="26.0" prefWidth="152.0" />
+                                <TextField fx:id="tfLocMaNV" prefHeight="26.0" prefWidth="152.0" />
                             </children>
                             <padding>
                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -263,7 +32,7 @@
                         <HBox alignment="CENTER" spacing="10.0">
                             <children>
                                 <Label text="Tên nhân viên" />
-                                <TextField prefHeight="26.0" prefWidth="152.0" />
+                                <TextField fx:id="tfLocTenNV" prefHeight="26.0" prefWidth="152.0" />
                             </children>
                             <padding>
                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -272,7 +41,7 @@
                         <HBox alignment="CENTER" spacing="10.0">
                             <children>
                                 <Label text="Ngày chấm công" />
-                                <DatePicker />
+                                <DatePicker fx:id="datepickLocNgayChamCong" onAction="#taiDuLieuChamCongNVNgayDuocChon" />
                             </children>
                             <padding>
                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -281,7 +50,7 @@
                         <HBox alignment="CENTER" prefHeight="30.0" prefWidth="270.0" spacing="10.0">
                             <children>
                                 <Label text="Phòng ban: " />
-                                <ComboBox prefHeight="26.0" prefWidth="154.0" />
+                                <ComboBox fx:id="cbxLocPhongBan" prefHeight="26.0" prefWidth="154.0" />
                             </children>
                             <padding>
                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -329,4 +98,17 @@
             </padding>
         </HBox>
     </bottom>
+   <center>
+          <TableView fx:id="tblviewChamCongNV" editable="true" onMouseClicked="#chonMotNhanVien" tableMenuButtonVisible="true" BorderPane.alignment="CENTER">
+              <columns>
+                  <TableColumn fx:id="colMaChamCongNV" prefWidth="85.59999996423721" text="Mã nhân viên" />
+                  <TableColumn fx:id="colHoTenChamCongNV" prefWidth="190.40005493164062" text="Họ tên" />
+                  <TableColumn fx:id="colPhongBanChamCongNV" prefWidth="135.199951171875" text="Phòng ban" />
+                  <TableColumn fx:id="colNgayChamCong" prefWidth="151.20001220703125" text="Ngày chấm công" />
+                    <TableColumn fx:id="colCheckDiLam" prefWidth="75.0" text="Đi làm" />
+                    <TableColumn fx:id="colCheckTangCa" prefWidth="75.0" text="Tăng ca" />
+                    <TableColumn fx:id="colCheckNghiPhep" prefWidth="75.0" text="Nghỉ phép" />
+              </columns>
+          </TableView>
+   </center>
 </BorderPane>
