--- a/src/main/resources/com/openjfx/qllspahg/fxml/HopDong/DanhSachHopDong.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/HopDong/DanhSachHopDong.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -20,8 +19,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.DanhSachHopDongController">
    <right>
       <BorderPane BorderPane.alignment="CENTER">
          <center>
@@ -40,13 +38,22 @@
                               <Insets left="20.0" />
                            </padding>
                         </Label>
+                        <HBox alignment="CENTER_LEFT" spacing="10.0">
+                           <padding>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </padding>
+                           <children>
+                              <Label text="Mã hợp đồng" HBox.hgrow="ALWAYS" />
+                              <TextField fx:id="tfMaHD" editable="false" prefHeight="26.0" prefWidth="227.0" HBox.hgrow="ALWAYS" />
+                           </children>
+                        </HBox>
                         <HBox alignment="CENTER_LEFT" spacing="10.0" VBox.vgrow="ALWAYS">
                            <padding>
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                            </padding>
                            <children>
                               <Label text="Họ tên khách hàng:" HBox.hgrow="ALWAYS" />
-                              <TextField prefHeight="26.0" prefWidth="227.0" HBox.hgrow="ALWAYS" />
+                              <TextField fx:id="tfHoTenKH" prefHeight="26.0" prefWidth="227.0" HBox.hgrow="ALWAYS" />
                            </children>
                         </HBox>
                         <HBox alignment="CENTER_LEFT" spacing="10.0">
@@ -55,7 +62,16 @@
                            </padding>
                            <children>
                               <Label text="Số điện thoại:" HBox.hgrow="ALWAYS" />
-                              <TextField prefHeight="26.0" prefWidth="172.0" HBox.hgrow="ALWAYS" />
+                              <TextField fx:id="tfSDTHD" prefHeight="26.0" prefWidth="172.0" HBox.hgrow="ALWAYS" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" spacing="10.0">
+                           <padding>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </padding>
+                           <children>
+                              <Label text="Địa chỉ:" HBox.hgrow="ALWAYS" />
+                              <TextField fx:id="tfDiaChiHD" prefHeight="26.0" prefWidth="172.0" HBox.hgrow="ALWAYS" />
                            </children>
                         </HBox>
                         <HBox alignment="CENTER_LEFT" spacing="10.0">
@@ -64,7 +80,7 @@
                            </padding>
                            <children>
                               <Label text="Email:" HBox.hgrow="ALWAYS" />
-                              <TextField prefHeight="26.0" prefWidth="172.0" HBox.hgrow="ALWAYS">
+                              <TextField fx:id="tfEmailHD" prefHeight="26.0" prefWidth="172.0" HBox.hgrow="ALWAYS">
                                  <HBox.margin>
                                     <Insets />
                                  </HBox.margin>
@@ -77,13 +93,13 @@
                            </padding>
                            <children>
                               <Label text="Ngày bắt đầu:" HBox.hgrow="ALWAYS" />
-                              <DatePicker HBox.hgrow="ALWAYS" />
+                              <DatePicker fx:id="datepickNgayBatDauHD" HBox.hgrow="ALWAYS" />
                            </children>
                         </HBox>
                         <HBox alignment="CENTER_LEFT" spacing="10.0">
                            <children>
                               <Label text="Ngày kết thúc:" HBox.hgrow="ALWAYS" />
-                              <DatePicker HBox.hgrow="ALWAYS" />
+                              <DatePicker fx:id="datepickNgayKetThucHD" HBox.hgrow="ALWAYS" />
                            </children>
                            <padding>
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -110,7 +126,7 @@
                         <HBox alignment="CENTER_LEFT" spacing="10.0">
                            <children>
                               <Label text="Mã sản phẩm:" HBox.hgrow="ALWAYS" />
-                              <TextField editable="false" prefHeight="26.0" prefWidth="172.0" HBox.hgrow="ALWAYS" />
+                              <TextField fx:id="tfMaSP" editable="false" prefHeight="26.0" prefWidth="172.0" HBox.hgrow="ALWAYS" />
                            </children>
                            <padding>
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -119,7 +135,7 @@
                         <HBox alignment="CENTER_LEFT" spacing="10.0" VBox.vgrow="ALWAYS">
                            <children>
                               <Label text="Tên sản phẩm:" HBox.hgrow="ALWAYS" />
-                              <ComboBox prefHeight="26.0" prefWidth="183.0" HBox.hgrow="ALWAYS" />
+                              <ComboBox fx:id="cbxTenSP" onAction="#chonMotSanPhamThem" prefHeight="26.0" prefWidth="183.0" HBox.hgrow="ALWAYS" />
                            </children>
                            <padding>
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -128,13 +144,13 @@
                         <HBox alignment="CENTER_LEFT" spacing="20.0">
                            <children>
                               <Label text="Số lượng:" HBox.hgrow="ALWAYS" />
-                              <Spinner editable="true" HBox.hgrow="ALWAYS" />
+                              <Spinner fx:id="tfSoLuongSP" editable="true" HBox.hgrow="ALWAYS" />
                            </children>
                            <padding>
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                            </padding>
                         </HBox>
-                        <HBox alignment="CENTER_LEFT" spacing="20.0" VBox.vgrow="ALWAYS">
+                        <HBox alignment="CENTER_LEFT" onDragDetected="#themSanPhamChoHopDong" spacing="20.0" VBox.vgrow="ALWAYS">
                            <padding>
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                            </padding>
@@ -148,7 +164,7 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <Button mnemonicParsing="false" text="Xóa sản phẩm" HBox.hgrow="ALWAYS">
+                              <Button mnemonicParsing="false" onAction="#xoaSanPhamChoHopDong" text="Xóa sản phẩm" HBox.hgrow="ALWAYS">
                                  <graphic>
                                     <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -179,7 +195,7 @@
                         </Label>
                         <HBox fillHeight="false" spacing="20.0">
                            <children>
-                              <Button mnemonicParsing="false" text="Tạo mới hợp đồng" HBox.hgrow="ALWAYS">
+                              <Button mnemonicParsing="false" onAction="#themHopDong" text="Tạo mới hợp đồng" HBox.hgrow="ALWAYS">
                                  <graphic>
                                     <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -188,7 +204,7 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <Button mnemonicParsing="false" text="Thanh lý hợp đồng" HBox.hgrow="ALWAYS">
+                              <Button mnemonicParsing="false" onAction="#thanhLyHopDong" text="Thanh lý hợp đồng" HBox.hgrow="ALWAYS">
                                  <graphic>
                                     <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -201,7 +217,7 @@
                         </HBox>
                         <HBox fillHeight="false" spacing="20.0">
                            <children>
-                              <Button mnemonicParsing="false" text="Xem chi tiết hợp đồng" HBox.hgrow="ALWAYS">
+                              <Button mnemonicParsing="false" onAction="#xemChiTietHopDong" text="Xem chi tiết hợp đồng" HBox.hgrow="ALWAYS">
                                  <graphic>
                                     <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -210,7 +226,7 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <Button mnemonicParsing="false" text="Cập nhật hợp đồng" HBox.hgrow="ALWAYS">
+                              <Button mnemonicParsing="false" onAction="#capNhatHopDong" text="Cập nhật hợp đồng" HBox.hgrow="ALWAYS">
                                  <graphic>
                                     <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -239,34 +255,27 @@
          <center>
             <SplitPane dividerPositions="0.7" orientation="VERTICAL" BorderPane.alignment="CENTER">
                <items>
-                  <ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-                     <content>
-                        <TableView editable="true" tableMenuButtonVisible="true">
-                           <columns>
-                              <TableColumn prefWidth="36.0" text="STT" />
-                              <TableColumn minWidth="-1.0" prefWidth="180.0" text="Mã hợp đồng" />
-                              <TableColumn minWidth="-1.0" prefWidth="257.6000061035156" text="Họ tên khách hàng" />
-                              <TableColumn minWidth="-1.0" prefWidth="75.199951171875" text="SDT" />
-                              <TableColumn minWidth="-1.0" prefWidth="143.20001220703125" text="Email" />
-                              <TableColumn minWidth="-1.0" prefWidth="166.4000244140625" text="Ngày bắt đầu" />
-                              <TableColumn minWidth="-1.0" prefWidth="166.4000244140625" text="Ngày kết thúc" />
-                           </columns>
-                        </TableView>
-                     </content>
-                  </ScrollPane>
-                  <ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-                     <content>
-                        <TableView editable="true" tableMenuButtonVisible="true">
-                           <columns>
-                              <TableColumn prefWidth="96.80001217126846" text="STT" />
-                              <TableColumn minWidth="-1.0" prefWidth="93.60000610351562" text="Mã sản phẩm" />
-                              <TableColumn minWidth="-1.0" prefWidth="64.0" text="Tên sản phẩm" />
-                              <TableColumn minWidth="-1.0" prefWidth="98.4000244140625" text="Số lượng" />
-                              <TableColumn minWidth="-1.0" prefWidth="108.00006103515625" text="Đơn giá sản phẩm" />
-                           </columns>
-                        </TableView>
-                     </content>
-                  </ScrollPane>
+                  <TableView fx:id="tblviewHopDong" editable="true" onMouseClicked="#chonMotHopDong" tableMenuButtonVisible="true">
+                     <columns>
+                        <TableColumn fx:id="colSTT" prefWidth="36.0" text="STT" />
+                        <TableColumn fx:id="colMaHD" minWidth="-1.0" prefWidth="98.0" text="Mã hợp đồng" />
+                        <TableColumn fx:id="colHoTenKHHD" minWidth="-1.0" prefWidth="192.0" text="Họ tên khách hàng" />
+                        <TableColumn fx:id="colDiaChiHD" minWidth="-1.0" prefWidth="189.0" text="Địa chỉ" />
+                        <TableColumn fx:id="colSDTHD" minWidth="-1.0" prefWidth="135.0" text="SDT" />
+                        <TableColumn fx:id="colEmailHD" minWidth="-1.0" prefWidth="210.0" text="Email" />
+                        <TableColumn fx:id="colNgayBatDauHD" minWidth="-1.0" prefWidth="108.0" text="Ngày bắt đầu" />
+                        <TableColumn fx:id="colNgayKetThucHD" minWidth="-1.0" prefWidth="136.0" text="Ngày kết thúc" />
+                     </columns>
+                  </TableView>
+                  <TableView fx:id="tblviewChiTietHopDong" editable="true" onMouseClicked="#chonMotChiTietHopDong" tableMenuButtonVisible="true">
+                     <columns>
+                        <TableColumn fx:id="colSTTSanPham" prefWidth="96.80001217126846" text="STT" />
+                        <TableColumn fx:id="colMaSP" minWidth="-1.0" prefWidth="93.60000610351562" text="Mã sản phẩm" />
+                        <TableColumn fx:id="colTenSP" minWidth="-1.0" prefWidth="64.0" text="Tên sản phẩm" />
+                        <TableColumn fx:id="colSoLuongSP" minWidth="-1.0" prefWidth="98.4000244140625" text="Số lượng" />
+                        <TableColumn fx:id="colDonGiaSP" minWidth="-1.0" prefWidth="108.00006103515625" text="Đơn giá sản phẩm" />
+                     </columns>
+                  </TableView>
                </items>
             </SplitPane>
          </center>
@@ -280,22 +289,22 @@
                   <HBox alignment="CENTER" spacing="10.0" HBox.hgrow="ALWAYS">
                      <children>
                         <Label text="Trạng thái:" HBox.hgrow="ALWAYS" />
-                        <ComboBox HBox.hgrow="ALWAYS" />
+                        <ComboBox fx:id="cbxLocTrangThaiHD" HBox.hgrow="ALWAYS" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER" spacing="10.0" HBox.hgrow="ALWAYS">
                      <children>
                         <Label text="Ngày bắt đầu:" HBox.hgrow="ALWAYS" />
-                        <DatePicker HBox.hgrow="ALWAYS" />
+                        <DatePicker fx:id="datepickLocNgayBatDau" HBox.hgrow="ALWAYS" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER" spacing="10.0" HBox.hgrow="ALWAYS">
                      <children>
                         <Label text="Ngày kết thúc:" HBox.hgrow="ALWAYS" />
-                        <DatePicker HBox.hgrow="ALWAYS" />
+                        <DatePicker fx:id="datepickLocNgayKetThuc" HBox.hgrow="ALWAYS" />
                      </children>
                   </HBox>
-                  <Button mnemonicParsing="false" text="Lấy dữ liệu " HBox.hgrow="ALWAYS">
+                  <Button mnemonicParsing="false" onAction="#layDuLieuLocDSHD" text="Lấy dữ liệu " HBox.hgrow="ALWAYS">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
@@ -311,7 +320,7 @@
    <bottom>
       <ToolBar BorderPane.alignment="CENTER">
          <items>
-            <Button mnemonicParsing="false" text="Làm mới">
+            <Button mnemonicParsing="false" onAction="#lamMoiDanhSachHD" text="Làm mới">
                <graphic>
                   <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -320,7 +329,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button mnemonicParsing="false" text="Cập nhật">
+            <Button mnemonicParsing="false" onAction="#luuDanhSachHopDong" text="Cập nhật">
                <graphic>
                   <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                      <image>
